@@ -1,8 +1,11 @@
-Summary of important user-visible changes for Windows 1.2.3+:
+Summary of important user-visible changes for Windows 1.2.4:
 ------------------------------------------------------------
  
  ** added iscom function
+
  ** support for returning 1-dimensional and 2-dimensional matrix data from COM objects
+
+ ** updated to remove warning when installing in Octave 4.2
 
 Summary of important user-visible changes for Windows 1.2.3:
 ------------------------------------------------------------
